# Sands-of-Duat

./: .gitignore  CLAUDE.md  CLAUDE_SPRINT_PLAN.md  Cargo.toml  HADES_ART_GENERATION_GUIDE.md  Instructions.txt  LAUNCH_GAME.bat  Makefile  PLAY_SANDS_OF_DUAT.bat  README.md  SPRINT_13_SUMMARY.md  Sands_of_Duat.bat  create_ra_card.py  create_real_anubis_art.py  debug_assets.py  jogar.bat  launch.py  main.py  play.bat  pyproject.toml  requirements.txt  run_agent_workflow.py  run_game.bat  start_game.bat  test_asset_integration.py  test_asset_verification.py  test_basic_functionality.py  test_card_balance_validation.py  test_performance_validation.py
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: asset-curator.md  code-reviewer.md  content-validator.md  game-ui-ux-designer.md  gameplay-designer.md  perf-optimizer.md  qa-engineer.md  release-engineer.md
.github/workflows/: python-ci.yml
agents/: __init__.py  agent_orchestrator.py  asset_generation_agent.py  game_development_agent.py
analysis/: DECK_BUILDER_COORDINATE_FIXES_SUMMARY.md  card_effects_test_results.json
art/prompts/: anubis_boss_concept.json  anubis_fur_albedo.json  ceremonial_staff_concept.json  generation_log.json  (+9 more)
art_pipeline/: README.md
assets/: asset_summary.json  regeneration_specs.json
config/: config.ini  mcp_config.json  requirements-dev.txt
docs/: AI_ART_GENERATION_SETUP_GUIDE.md  ASSET_GENERATION_COMPLETE.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  COMPLETE_SAVE_PROGRESSION_SYSTEM.md  COMPREHENSIVE_CARD_EFFECTS_REPORT.md  COMPREHENSIVE_DRAG_DROP_ANALYSIS_REPORT.md  COMPREHENSIVE_QA_REPORT.md  COMPREHENSIVE_RTX5070_PROJECT_REPORT.md  COMPREHENSIVE_UI_UX_ENHANCEMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  FASE1_RESEARCH_COMPLETE.md  FASE2_SETUP_TECNICO_COMPLETE.md  FASE3_LORA_DATASET_COMPLETE.md  FASE4_SISTEMA_INTELIGENTE_COMPLETE.md  FASE5_MASS_PRODUCTION_COMPLETE.md  FASE6_EXTREME_QUALITY_CONTROL_COMPLETE.md  FASE7_FINAL_INTEGRATION_COMPLETE.md  GODOT_IMPLEMENTATION_SUMMARY.md  HADES_QUALITY_AI_ART_SYSTEM.md  HADES_STYLE_MASTER_PLAN.md  MCP_SETUP.md  MISSING_CARD_EFFECTS_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SANDS_OF_DUAT_MASTER_IMPLEMENTATION_PLAN.md  SESSION_HANDOFF_DOCUMENTATION.md  SPRINT_3_COMPLETE.md  SPRINT_4_UX_TESTING.md  SPRINT_5_ANIMATION_PIPELINE.md  SPRINT_ROADMAP_COMPLETE_GAME.md  ULTRAWIDE_DISPLAY_ANALYSIS_REPORT.md
examples/: performance_integration_example.py  performance_optimization_showcase.py  premium_asset_integration_example.py
game_assets/: ASSET_INDEX.json  ASSET_MANIFEST.json  ASSET_PIPELINE_REPORT.md  ASSET_REPLACEMENT_PLAN.md  FINAL_QUALITY_REPORT.md  FOLDER_STRUCTURE.md  GENERATION_SUMMARY.json  HADES_QUALITY_MANIFEST.json  INTEGRATION_GUIDE.md
lora_training/: lora_asset_generator.py  train_lora.sh
mcp_analysis/: COMPREHENSIVE_MCP_ANALYSIS_REPORT.md  EXECUTIVE_SUMMARY.md  README.md  game_analysis.py  game_screenshot_tool.py  screen_by_screen_test.py  screenshot_tool.py  simple_game_test.py
sands_duat/: __init__.py
scripts/: comprehensive_game_test.py  crewai_agents.py  demo_art_pipeline.py  game_testing_report.md  generate_4k_assets.bat  generate_4k_assets.py  generate_ai_animations.bat  generate_ai_animations.py  generate_ai_assets_sdxl_clean.py  generate_missing_card_frames.py  launch_with_comfyui.bat  manage.py  multi_agent_development_plan.md  open_godot.bat  setup_ai_generation.bat  setup_ai_generation.py  setup_comfyui.py  start_comfyui_server.bat
src/: asset_loader.rs  assets.py  components.rs  game.py  hades_3d_system.rs  hades_assets.rs  hades_visual_polish.rs  lib.rs  main.rs  placeholder_3d_models.rs  placeholder_assets.rs  simple_game_test.py  sprite_animation.rs  true_3d_system.rs  working_game.py
systems/: README.md  __init__.py
test_results/: advanced_pipeline_test.json
tests/: COMPREHENSIVE_EDGE_CASE_ANALYSIS_REPORT.md  RELATORIO_FINAL_SANDS_OF_DUAT.md  __init__.py  check_deck_objects.py  comprehensive_card_effects_test.py  comprehensive_final_report.py  comprehensive_quality_report.json  create_ra_card.py  debug_card_addition.py  debug_deck_limits.py  debug_final_chain.py  debug_real_cards.py  diagnostic_deck_builder.py  export_egyptian_cards.py  final_coordinate_test.py  final_test_report.json  mcp_comprehensive_test.py  quick_visual_test.py  run_final_test.py  run_game.py  showcase_combat.py  simple_chain_test.py  simple_deck_test.py  test_all_functionality.py  test_asset_verification.py  test_balance_improvements.py  test_basic_functionality.py  test_card_addition_debug.py  test_card_balance_validation.py  test_changes.py  test_combat.py  test_combat_edge_cases.py  test_complete_game_experience.py  test_complete_integration.py  test_comprehensive_performance.py  test_content.py  test_crewai_setup.py  test_deck_builder_analysis.py  test_deck_builder_coordinate_fix.py  test_deck_builder_debug.py  (+31 more)
tools/: GENERATE_HADES_ART.bat  GENERATE_NOW.bat  HADES_EGYPTIAN_PROMPTS.txt  INSTANT_ART_SETUP.bat  README.md  actual_asset_generator.py  advanced_asset_pipeline.py  advanced_blender_pipeline.py  ai_asset_generator.py  animate_generated_cards.py  animation_pipeline.py  art_requirements.txt  asset_gen_agent.py  asset_integrator.py  asset_organizer.py  automated_dataset_collector.py  batch_asset_generator.py  blender_3d_modeling.py  blender_3d_pipeline.py  check_transparency.py  clean_bg.py  complete_assets.py  comprehensive_asset_pipeline.py  comprehensive_asset_regeneration.py  continuous_ai_generator.py  create_advanced_enemies.py  create_animation_pipeline.py  create_environment_models.py  create_staff_weapon.py  debug_game.py  direct_asset_generator.py  egyptian_hades_lora_trainer.py  game_screenshot_tool.py  gen_art.py  generate_3d_concepts.py  generate_ai_assets.bat  generate_ai_effects.py  generate_all_assets.py  generate_animated_artwork.py  generate_backgrounds.py  (+61 more)
(+635 files in other folders)
